--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FoodListActivity">
+        <activity android:name=".FoodListActivity"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".FoodStaticReceiver">
+            <intent-filter>
+                <action android:name="moe.nyamori.nutritionlistalter.foodstaticfilter"/>
+            </intent-filter>
+
+        </receiver>
         <activity android:name=".FoodDetailActivity"></activity>
     </application>
 
